Fixes #483 - Activity names cut off in Grader Report. Add conectime logo in Notifications page

--- a/scss/moove/_course.scss
+++ b/scss/moove/_course.scss
@@ -87,6 +87,18 @@
     }
 }
 
+.path-grade-report-grader {
+    .gradeparent tr.heading {
+        top: 130px;
+    }
+
+    &.hasaccessibilitybar {
+        .gradeparent tr.heading {
+            top: 160px;
+        }
+    }
+}
+
 @include media-breakpoint-down(md) {
     .activity-navigation {
         .larrow,
